<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Date To Photo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Ajustes</string>
    <string name="pref_active_title">Procesar fotos automáticamente</string>
    <string name="pref_active_summary">Procesar fotos mientras el dispositivo se carga</string>
    <string name="pref_active_key">runcharging</string>
    <string name="pref_active_default">true</string>
    <string name="pref_overwrite_key">overwritephotos</string>
    <string name="pref_overwrite_title">Sobreescribir fotos</string>
    <string name="pref_overwrite_summary">Sobreescribir la foto original con la foto con fecha</string>
    <string name="pref_shownotification_key">shownotification</string>
    <string name="pref_shownotification_title">Mostrar notificación</string>
    <string name="pref_shownotification_summary">Mostrar una notificación cuando se estén procesando las fotos</string>
    <string name="pref_keeplargephoto_key">keeplargephoto</string>
    <string name="pref_keeplargephoto_title">Conservar fotos muy grandes</string>
    <string name="pref_keeplargephoto_summary">Si la foto es muy grande, conservar la foto en su tamaño original y crear
    una copia con fecha, pero más pequeña (la foto se duplicará)</string>
    <string name="title_activity_about">Acerca de</string>
    <string name="title_activity_settings">Opciones</string>
    <string name="pref_folderstoprocess_key">foldersprocess</string>
    <string name="no_photos">No hay fotos sin fechar</string>
    <string name="skip_button">SKIP</string>
    <string name="done_button">DONE</string>
    <string name="title_activity_photos">Date To Photo</string>
    <string name="title_activity_disk_space_usage">Espacio en disco</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="activity_progress_title">Progreso</string>
    <string name="pref_date_color_key">datecolor</string>
    <string name="channel_general">Notificaciones generales</string>
    <string name="cancelling">Cancelando…</string>
    <string name="process_has_finished">El proceso ha finalizado</string>
    <string name="all">Todas</string>
    <string name="pref_folderstoprocess_title">Carpetas que se procesarán</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="allfolders">Todas</string>
    <string name="no_folders">No hay carpetas</string>
    <string name="pref_theme_key" translatable="false">theme</string>
    <string name="pref_theme_title">Tema</string>
    <string name="pref_theme_default">@string/set_by_battery_saver_value</string>
    <string name="light">Claro</string>
    <string name="dark">Oscuro</string>
    <string name="set_by_battery_saver">Establecido por ahorro de batería</string>
    <string name="system_default">Predeterminado del sistema</string>
    <string name="light_value" translatable="false">light</string>
    <string name="dark_value" translatable="false">dark</string>
    <string name="set_by_battery_saver_value" translatable="false">set_by_battery_saver</string>
    <string name="system_default_value" translatable="false">system_default</string>
    <string name="permission">Permiso</string>
    <string name="give_permission_to_overwrite_photos">Debes conceder permiso a cada una de las carpetas seleccionadas para poder sobreescribir las fotos</string>
    <string name="permission_necessary">Permiso necesario</string>
    <string name="alerts">Alertas</string>
</resources>
